@@ -1,0 +1,3 @@
+import sys
+reload(sys)
+sys.setdefaultencoding('utf8')
