@@ -144,10 +144,10 @@ def post_comment(request, next = None):
     response = HttpResponseRedirect('%s#comment-%d' % (target.get_absolute_url(), comment.id))
 
     try:
-        response.set_cookie('ip', comment.ip_address, max_age = 30)
-        response.set_cookie('email', comment.user_email)
-        response.set_cookie('url', comment.user_url)
-        response.set_cookie('name', comment.user_name.encode('utf-8'))
+        response.set_cookie('ip', comment.ip_address, max_age = 31536000)
+        response.set_cookie('email', comment.user_email, max_age = 31536000)
+        response.set_cookie('url', comment.user_url, max_age = 31536000)
+        response.set_cookie('name', comment.user_name, max_age = 31536000)
     except:
         pass
 
